feat (order) updated routes and return db values
